<resources>
    <string name="app_name">Hotell Application</string>
    <string name="google_maps_key">AIzaSyCtHSJR9-Bh264jbLESZnoT0P7qOJgBZ_M</string>
    <string name="room_number">Room NR</string>
    <string name="hotell_taxi">TAXI booker</string>
    <string name="book_button">Order TAXI</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="taxi_mail">hotell.taxi@gmail.com</string>
    <string name="new_guest">New Guest</string>
    <string name="taxi_mail_header">TAXI mail:</string>

    <string name="title_activity_main">TAXI order</string>
    <string name="order_taxi">Order Taxi</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="passenger_number">Number of passengers</string>
    <string name="departure_time">Departure time</string>
    <string name="hotel_info">Hotel info</string>
    <string name="all_guests">All guests</string>
    <string name="filler_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="guest_name">Guest name</string>
    <string name="guest_email">Guest e-mail</string>
    <string name="guest_phone_number">Guest phonenumber</string>
    <string name="submit_guest">Submit</string>
    <string name="cancel_guest">Cancel</string>
    <string name="show_as_street_view_btn">Show as Street View!</string>
</resources>
