<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="no.westerdals.odeand.hotellapplication.NewGuestFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50sp"
        android:layout_gravity="center_horizontal"
        >

        <EditText
            android:id="@+id/edit_new_room_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/room_number"
            android:layout_margin="20sp"
            android:inputType="number" />
        <EditText
            android:id="@+id/edit_new_guest_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/guest_name"
            android:layout_margin="20sp"
            android:inputType="text"/>
        <EditText
            android:id="@+id/edit_new_guest_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/guest_email"
            android:layout_margin="20sp"
            android:inputType="textEmailAddress" />
        <EditText
            android:id="@+id/edit_new_phone_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/guest_phone_number"
            android:layout_margin="20sp"
            android:inputType="phone" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="50sp"
        android:layout_gravity="bottom"
        >

        <Button
            android:id="@+id/button_new_guest_cancel"
            android:hint="@string/cancel_guest"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20sp"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/button_new_guest_submit"
            android:hint="@string/submit_guest"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20sp"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"/>

    </LinearLayout>

</FrameLayout>
